force-app/main/default/objects/Liable_Party_Case_Issue__c/Liable_Party_Case_Issue__c.object-meta.xml
<CustomObject>
    <description>Junction between liable parties and case issues. Denormalizes data model to allow the application of a liable party&#39;s proportionate share to the issue totals</description>
    <label>Liable Party Case Issue</label>
    <nameField>
        <displayFormat>LPCI-{000000}</displayFormat>
        <label>Liable Party Case Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liable Party Case Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>