force-app/main/default/objects/Liable_Party_Case_Issue__c/fields/Balance_Due_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_to_Employee__c</fullName>
    <formula>Case_Issue__r.Wage_Balance_Due__c *  Liable_Party__r.Proportionate_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due to Employee(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>