force-app/main/default/objects/Liable_Party_Case_Issue__c/fields/CI_LEGACY__c.field-meta.xml
<CustomField>
    <fullName>CI_LEGACY__c</fullName>
    <formula>Liable_Party__r.Legacy_Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CI LEGACY</label>
    <type>Text</type>
</CustomField>