force-app/main/default/objects/Liable_Party_Case_Issue__c/fields/Liable_Party__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liable Party</label>
    <referenceTo>Liable_Party__c</referenceTo>
    <relationshipLabel>Liable Party Case Issues</relationshipLabel>
    <relationshipName>Liable_Party_Case_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>