force-app/main/default/objects/Liable_Party_Case_Issue__c/fields/ODA_Id_Migration__c.field-meta.xml
<CustomField>
    <fullName>ODA_Id_Migration__c</fullName>
    <description>For simplicity of design in SOQL, this formula field migrates the ODA Id from a Liable Party record to the Liable Party Case Issue record.  That id may then be used as a filter in the SOQL query.</description>
    <formula>Liable_Party__r.ODA__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ODA Id Migration</label>
    <type>Text</type>
</CustomField>