force-app/main/default/objects/Liable_Party_Case_Issue__c/fields/Reporting_Category_Group_Field__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category_Group_Field__c</fullName>
    <description>Field to migrate value from Reporting Category formula field in order to group in SOQL.</description>
    <label>Reporting Category - Group Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>