force-app/main/default/objects/Liable_Party_Case_Issue__c/fields/Reporting_Category_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category_Sort_Order__c</fullName>
    <formula>Case_Issue__r.Violation_Type__r.Reporting_Category_Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reporting category sort order from the case issue</inlineHelpText>
    <label>Reporting Category Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>